--- a/nimr_web/templates/nimr_web/bootstrap/base.html
+++ b/nimr_web/templates/nimr_web/bootstrap/base.html
@@ -837,7 +837,7 @@
                                     <ul class="links-list clearfix">
                                         <li><a href="https://mail.nimr.or.tz/">STAFF MAIL</a></li>
                                         <li><a href="https://safari.gov.go.tz/index.php/user/auth/login">Travel Permit E-Application</a></li>
-                                        <li><a href="salaryslip.mof.go.tz/Account/Login?ReturnUrl=%2F">Salary Slip Portal</a></li>
+                                        <li><a href="https://salaryslip.mof.go.tz/Account/Login?ReturnUrl=%2F">Salary Slip Portal</a></li>
                                         <li><a href="http://www.nimr.or.tz/">NIMR HQ</a></li>
                                         <li><a href="https://www.moh.go.tz/">MOH</a></li>
                                         <li><a href="http://www.mnh.or.tz/">MNH</a></li>
