updates heads of deprt

--- a/nimr_web/templates/nimr_web/bootstrap/base.html
+++ b/nimr_web/templates/nimr_web/bootstrap/base.html
@@ -774,7 +774,7 @@
                                     <figure class="image-box"><a href="{% url 'nimr_web:team' %}"><img src="{% static 'assets/images/team/mbuguni.jpg' %}" alt=""></a></figure>
                                     <div class="lower-content">
                                         <div class="author-box">
-                                            <h4><a href="{% url 'nimr_web:team' %}">Patrick Mbuguni</a></h4>
+                                            <h4><a href="{% url 'nimr_web:team' %}">CPA. Ndojime Patrick Mbughuni</a></h4>
                                             <span class="designation">Head Finance</span>
                                         </div>
                                     </div>
@@ -787,7 +787,7 @@
                                     <figure class="image-box"><a href="{% url 'nimr_web:team' %}"><img src="{% static 'assets/images/team/jane.jpg' %}" alt=""></a></figure>
                                     <div class="lower-content">
                                         <div class="author-box">
-                                            <h4><a href="{% url 'nimr_web:team' %}">Jane Tungu</a></h4>
+                                            <h4><a href="{% url 'nimr_web:team' %}">Ms. Jane Julius Tungu</a></h4>
                                             <span class="designation">Administration</span>
                                         </div>
                                     </div>
