add team member

--- a/nimr_web/templates/nimr_web/bootstrap/base.html
+++ b/nimr_web/templates/nimr_web/bootstrap/base.html
@@ -214,8 +214,8 @@
                                     <h4>Contact Info</h4>
                                     <ul>
                                         <li>4th Floor, HDCHPE Building, MUHAS Main Campus, Dar es salaam, Tanzania</li>
-                                        <li><a href="tel:+255222152232">+255-22-2152232</a></li>
-                                        <li><a href="mailto:muhimbili@nimr.or.tz">muhimbili@nimr.or.tz</a></li>
+                                        <li><a href="#">+255-22-2152232</a></li>
+                                        <li><a href="#">muhimbili@nimr.or.tz</a></li>
                                     </ul>
                                 </div>
                                 <ul class="social-box">
@@ -268,7 +268,7 @@
                         </div>
                         <div class="right-column pull-right clearfix">
                             <ul class="info-list clearfix">
-                                <li><i class="flaticon-phone-with-wire"></i><strong><a href="tel:255222152232">+255-22-2152232</a></strong></li>
+                                <li><i class="flaticon-phone-with-wire"></i><strong><a href="#" >+255-22-2152232</a></strong></li>
                                 <li><i class="flaticon-fast"></i><strong><a href="#"> 08:00 to 16:00</a></strong></li>
                             </ul>
                             <ul class="social-links clearfix">
@@ -867,7 +867,7 @@
                                         </li>
                                         <li>
                                             <h5>Email</h5>
-                                            <p><a href="mailto:muhimbili@nimr.or.tz">muhimbili@nimr.or.tz</a></p>
+                                            <p><a href="#">muhimbili@nimr.or.tz</a></p>
                                         </li>
                                     </ul>
                                 </div>
