--- a/nimr_web/templates/nimr_web/bootstrap/base.html
+++ b/nimr_web/templates/nimr_web/bootstrap/base.html
@@ -761,7 +761,7 @@
                                     <figure class="image-box"><a href="{% url 'nimr_web:team' %}"><img src="{% static 'assets/images/team/range.jpg' %}" alt=""></a></figure>
                                     <div class="lower-content">
                                         <div class="author-box">
-                                            <h4><a href="{% url 'nimr_web:team' %}">DR. Nyagosya Range</a></h4>
+                                            <h4><a href="{% url 'nimr_web:team' %}">Dr. Nyagosya Range</a></h4>
                                             <span class="designation">Head Laboratory</span>
                                         </div>
                                     </div>
@@ -800,7 +800,7 @@
                                     <figure class="image-box"><a href="{% url 'nimr_web:team' %}"><img src="{% static 'assets/images/team/rose.jpg' %}" alt=""></a></figure>
                                     <div class="lower-content">
                                         <div class="author-box">
-                                            <h4><a href="{% url 'nimr_web:team' %}">Rose Tendeka</a></h4>
+                                            <h4><a href="{% url 'nimr_web:team' %}">Ms. Rose Tendeka</a></h4>
                                             <span class="designation">Head PMU</span>
                                         </div>
                                     </div>
