--- a/nimr_web/templates/nimr_web/bootstrap/publications.html
+++ b/nimr_web/templates/nimr_web/bootstrap/publications.html
@@ -1,4 +1,5 @@
 {% extends 'nimr_web/bootstrap/base.html' %}
+{% load nimr_web_tags %}
 {% load static %}
 {% block content %}
         <!-- banner-section -->
@@ -46,5 +47,6 @@
             </div>
         </div>
     </section>
+    {% pagination %}
     <!-- activities-section end -->
 {% endblock %}
