--- a/nimr_web/templates/nimr_web/bootstrap/base.html
+++ b/nimr_web/templates/nimr_web/bootstrap/base.html
@@ -300,7 +300,7 @@
                                         <li><a href="{% url 'nimr_web:about' %}">About Us</a></li>
                                         <li class="dropdown"><a href="#">Departments</a>
                                             <ul>
-                                                <li><a href="{% url 'nimr_web:finance' %}">Finance</a></li>
+                                                <li><a href="{% url 'nimr_web:finance' %}">Corporate Services</a></li>
                                                 <li><a href="{% url 'nimr_web:hritd' %}">HRITD</a></li>
                                                 <li><a href="{% url 'nimr_web:lab' %}">Laboratory</a></li>
                                                 <li><a href="{% url 'nimr_web:monitoring' %}">Monitoring & Control</a></li>
@@ -775,7 +775,7 @@
                                     <div class="lower-content">
                                         <div class="author-box">
                                             <h4><a href="{% url 'nimr_web:team' %}">CPA. Ndojime Patrick Mbughuni</a></h4>
-                                            <span class="designation">Head Finance</span>
+                                            <span class="designation">Head Corporate Services</span>
                                         </div>
                                     </div>
                                 </div>
