--- a/nimr_web/templates/nimr_web/bootstrap/dp_finance.html
+++ b/nimr_web/templates/nimr_web/bootstrap/dp_finance.html
@@ -6,11 +6,11 @@
         <div class="auto-container">
             <div class="content-box">
                 <div class="title centred">
-                    <h1>Finance Department</h1>
+                    <h1>Corporate Services Department</h1>
                 </div>
                 <ul class="bread-crumb clearfix">
                     <li><a href="{% url 'nimr_web:home' %}">Home</a></li>
-                    <li>Finance</li>
+                    <li>Corporate Services</li>
                 </ul>
             </div>
         </div>
@@ -25,12 +25,12 @@
                     <div class="content_block_8">
                         <div class="content-box">
                             <div class="sec-title">
-                                <h6><i class="flaticon-star"></i><span>Finance</span></h6>
-                                <h2>Finance Department</h2>
+                                <h6><i class="flaticon-star"></i><span>Corporate Services</span></h6>
+                                <h2>Corporate Services Department</h2>
                                 <div class="title-shape"></div>
                             </div>
                             <div class="text">
-                                <p>Activities Performed by finance department </p>
+                                <p>Activities Performed by Corporate Services Department </p>
                             </div>
                             <ul class="accordion-box">
                                 <li class="accordion block">
