--- a/nimr_web/templates/nimr_web/bootstrap/base.html
+++ b/nimr_web/templates/nimr_web/bootstrap/base.html
@@ -311,7 +311,7 @@
                                         <li class="dropdown"><a href="#">Research Stations</a>
                                             <ul>
                                                 <li><a href="#">Haydom Research Station</a></li>
-                                                <li><a href="#">Kilosa Research Station</a></li>
+                                                <li><a href="{% url 'nimr_web:kilosa' %}">Kilosa Research Station</a></li>
                                             </ul>
                                         </li>
                                         <li><a href="{% url 'nimr_web:team' %}">Our Team</a></li>
@@ -584,7 +584,7 @@
                         <div class="col-lg-3 col-md-6 col-sm-12 service-block">
                             <div class="service-block-one wow fadeInRight animated animated" data-wow-delay="00ms" data-wow-duration="1500ms">
                                 <div class="inner-box">
-                                    <h4><a href="{% url 'nimr_web:finance' %}">Finance Department</a></h4>
+                                    <h4><a href="{% url 'nimr_web:finance' %}">Corporate Services Department</a></h4>
                                     <div class="btn-box"><a href="#{% url 'nimr_web:finance' %}">More</a></div>
                                     <div class="icon-box"><i class="flaticon-budget"></i></div>
                                 </div>
