--- a/nimr_web/templates/nimr_web/bootstrap/base.html
+++ b/nimr_web/templates/nimr_web/bootstrap/base.html
@@ -892,7 +892,8 @@
                 <div class="auto-container">
                     <div class="bottom-inner clearfix">
                         <div class="copyright pull-left">
-                            <strong><p>&copy; {% now "Y" %} By <a href="#">Muhimbili Medical Research Centre</a> All Rights Reserved. </p></strong>
+                            <strong><p> &copy; {% now "Y" %} By <a href="#">Muhimbili
+                                Medical Research Centre</a> All Rights Reserved. </p></strong>
                         </div>
                         <ul class="footer-nav clearfix pull-right">
                             <li><strong><a href="https://mail.nimr.or.tz/">STAFF MAILS</a></strong></li>
