--- a/nimr_web/templates/nimr_web/bootstrap/base.html
+++ b/nimr_web/templates/nimr_web/bootstrap/base.html
@@ -3,11 +3,16 @@
 <html lang="en">
 
 <head>
+    <title> NIMR-MUHIMBILI </title>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 
-<title> NIMR-MUHIMBILI </title>
+<meta name="description" content="To conduct, regulate, coordinate, and promote health research that is responsive to the needs and wellbeing of Tanzanians">
+<meta name="keywords" content="Research, Medical Research, Muhimbili, NIMR, Clinical Trials,
+ Health Research, CRTL, National Institute for Medical Research">
+<link rel="author" href="#" />
+<link rel="canonical" href="https://muhimbili.nimr.or.tz/" />
 
 <!-- Fav Icon -->
 <link rel="icon" href="{% static 'assets/images/favicon.ico' %}" type="image/x-icon">
