--- a/nimr_web/templates/nimr_web/bootstrap/team.html
+++ b/nimr_web/templates/nimr_web/bootstrap/team.html
@@ -32,8 +32,7 @@
                     <div class="col-lg-3 col-md-6 col-sm-12 team-block">
                     <div class="team-block-one wow fadeInUp animated animated" data-wow-delay="00ms" data-wow-duration="1500ms">
                         <div class="inner-box">
-                            <figure class="image-box"><a href="{% staff_profile_link staff.id %}"><img src="{% static staff.staff_photo %}"
-                                       alt=""></a></figure>
+                            <figure class="image-box"><a href="{% staff_profile_link staff.id %}">{% staff_photo staff.staff_photo %}</a></figure>
                             <div class="lower-content">
                                 <div class="author-box">
                                     <h4><a href="{% staff_profile_link staff.id %}">{{ staff.staff_name }}</a></h4>
