--- a/nimr_web/templates/nimr_web/bootstrap/base.html
+++ b/nimr_web/templates/nimr_web/bootstrap/base.html
@@ -427,7 +427,6 @@
                                 <h6><i class="flaticon-star"></i>Scientists at the CTRL</h6>
                                 <h1>Primary Isolation of Mycobacterium Tuberculosisis</h1>
                                 <p>Laboratory Scientists at the CTRL performing culture reading for sputum specimen inoculated in the egg-based culture technique</p>
-
                             </div>
                         </div>
                     </div>
@@ -458,6 +457,7 @@
                             </div>
                         </div>
                     </div>
+                    {% slider %}
                 </div>
             </section>
             <!-- banner-section end -->
