--- a/nimr_web/templates/nimr_web/bootstrap/tags/slider_photo.html
+++ b/nimr_web/templates/nimr_web/bootstrap/tags/slider_photo.html
@@ -13,9 +13,8 @@
                 {% if slider.slider_description %}
                     <p>{{ slider.slider_description }}</p>
                 {% else %}
-                    <p1>&nbsp;&nbsp;</p1>
-                    <p>&nbsp;&nbsp;</p>
-                    <p1>&nbsp;&nbsp;</p1>
+{#                    <p1>&nbsp;&nbsp;</p1>#}
+{#                    <p>&nbsp;&nbsp;</p>#}
                 {% endif %}
                 <div class="btn-box">
                     <a href="#" class="theme-btn">Read More</a>
