--- a/nimr_web/templates/nimr_web/bootstrap/base.html
+++ b/nimr_web/templates/nimr_web/bootstrap/base.html
@@ -685,97 +685,22 @@
                         <a href="{% url 'nimr_web:team' %}" class="theme-btn">All members</a>
                     </div>
                     <div class="row clearfix">
-                        <div class="col-lg-3 col-md-6 col-sm-12 team-block">
+                        {% for head in heads %}
+                            <div class="col-lg-3 col-md-6 col-sm-12 team-block">
                             <div class="team-block-one wow fadeInUp animated animated" data-wow-delay="00ms" data-wow-duration="1500ms">
                                 <div class="inner-box">
-                                    <figure class="image-box"><a href="{% url 'nimr_web:team' %}"><img src="{% static 'assets/images/team/amos.jpg' %}" alt=""></a></figure>
+                                    <figure class="image-box"><a href="{% url 'nimr_web:team' %}">{% staff_photo head.image %}</a></figure>
                                     <div class="lower-content">
                                         <div class="author-box">
-                                            <h4><a href="{% url 'nimr_web:team' %}">Dr. Amos Kahwa</a></h4>
-                                            <span class="designation">Head of Research</span>
+                                            <h4><a href="{% url 'nimr_web:team' %}">{{ head.head_name }}</a></h4>
+                                            <span class="designation">Head {{ head.head_department }}</span>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-3 col-md-6 col-sm-12 team-block">
-                            <div class="team-block-one wow fadeInUp animated animated" data-wow-delay="200ms" data-wow-duration="1500ms">
-                                <div class="inner-box">
-                                    <figure class="image-box"><a href="{% url 'nimr_web:team' %}"><img src="{% static 'assets/images/team/esther.jpg' %}" alt=""></a></figure>
-                                    <div class="lower-content">
-                                        <div class="author-box">
-                                            <h4><a href="{% url 'nimr_web:team' %}">Dr. Esther Ngadaya</a></h4>
-                                            <span class="designation">Head Monitoring & Control</span>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-md-6 col-sm-12 team-block">
-                            <div class="team-block-one wow fadeInUp animated animated" data-wow-delay="400ms" data-wow-duration="1500ms">
-                                <div class="inner-box">
-                                    <figure class="image-box"><a href="{% url 'nimr_web:team' %}"><img src="{% static 'assets/images/team/kilale.jpg' %}" alt=""></a></figure>
-                                    <div class="lower-content">
-                                        <div class="author-box">
-                                            <h4><a href="{% url 'nimr_web:team' %}">Dr. Andrew Kilale</a></h4>
-                                            <span class="designation">Head HRITD</span>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-md-6 col-sm-12 team-block">
-                            <div class="team-block-one wow fadeInUp animated animated" data-wow-delay="600ms" data-wow-duration="1500ms">
-                                <div class="inner-box">
-                                    <figure class="image-box"><a href="{% url 'nimr_web:team' %}"><img src="{% static 'assets/images/team/range.jpg' %}" alt=""></a></figure>
-                                    <div class="lower-content">
-                                        <div class="author-box">
-                                            <h4><a href="{% url 'nimr_web:team' %}">Dr. Nyagosya Range</a></h4>
-                                            <span class="designation">Head Laboratory</span>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-md-6 col-sm-12 team-block">
-                            <div class="team-block-one wow fadeInUp animated animated" data-wow-delay="600ms" data-wow-duration="1500ms">
-                                <div class="inner-box">
-                                    <figure class="image-box"><a href="{% url 'nimr_web:team' %}"><img src="{% static 'assets/images/team/mbuguni.jpg' %}" alt=""></a></figure>
-                                    <div class="lower-content">
-                                        <div class="author-box">
-                                            <h4><a href="{% url 'nimr_web:team' %}">CPA. Ndojime Patrick Mbughuni</a></h4>
-                                            <span class="designation">Head Corporate Services</span>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-md-6 col-sm-12 team-block">
-                            <div class="team-block-one wow fadeInUp animated animated" data-wow-delay="600ms" data-wow-duration="1500ms">
-                                <div class="inner-box">
-                                    <figure class="image-box"><a href="{% url 'nimr_web:team' %}"><img src="{% static 'assets/images/team/jane.jpg' %}" alt=""></a></figure>
-                                    <div class="lower-content">
-                                        <div class="author-box">
-                                            <h4><a href="{% url 'nimr_web:team' %}">Ms. Jane Julius Tungu</a></h4>
-                                            <span class="designation">Administration</span>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-md-6 col-sm-12 team-block">
-                            <div class="team-block-one wow fadeInUp animated animated" data-wow-delay="600ms" data-wow-duration="1500ms">
-                                <div class="inner-box">
-                                    <figure class="image-box"><a href="{% url 'nimr_web:team' %}"><img src="{% static 'assets/images/team/rose.jpg' %}" alt=""></a></figure>
-                                    <div class="lower-content">
-                                        <div class="author-box">
-                                            <h4><a href="{% url 'nimr_web:team' %}">Ms. Rose Tendeka</a></h4>
-                                            <span class="designation">Head PMU</span>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                        {% endfor %}
+
                     </div>
                 </div>
             </section>
