--- a/nimr_web/templates/nimr_web/bootstrap/profile.html
+++ b/nimr_web/templates/nimr_web/bootstrap/profile.html
@@ -39,7 +39,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-12 team-block">
                     <div class="team-block-one wow fadeInUp animated animated" data-wow-delay="00ms" data-wow-duration="1500ms">
                         <div class="inner-box">
-                            <figure class="image-box"><a href="#"><img src="{% static staff_profile.staff_photo %}" alt=""></a></figure>
+                            <figure class="image-box"><a href="#">{% staff_photo staff_profile.staff_photo %}</a></figure>
                             <div class="lower-content">
                                 <div class="author-box">
                                     <h4><a href="#">{{ staff_profile.staff_name }}</a></h4>
