--- a/nimr_web/templates/nimr_web/bootstrap/base.html
+++ b/nimr_web/templates/nimr_web/bootstrap/base.html
@@ -236,7 +236,7 @@
                                 </div>
                                 <ul class="social-box">
                                     <li class="facebook"><a href="#" class="fab fa-facebook-f"></a></li>
-                                    <li class="twitter"><a href="#" class="fab fa-twitter"></a></li>
+                                    <li class="twitter"><a href="https://twitter.com/NIMRMuhimbili" class="fab fa-twitter"></a></li>
                                     <li class="linkedin"><a href="#" class="fab fa-linkedin-in"></a></li>
                                     <li class="instagram"><a href="#" class="fab fa-instagram"></a></li>
                                 </ul>
@@ -289,7 +289,7 @@
                             </ul>
                             <ul class="social-links clearfix">
                                 <li><a href="#"><i class="fab fa-facebook-square"></i></a></li>
-                                <li><a href="#"><i class="fab fa-twitter-square"></i></a></li>
+                                <li><a href="https://twitter.com/NIMRMuhimbili"><i class="fab fa-twitter-square"></i></a></li>
                                 <li><a href="#"><i class="fab fa-youtube-square"></i></a></li>
                                 <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
                             </ul>
@@ -406,7 +406,7 @@
                 </div>
                 <div class="social-links">
                     <ul class="clearfix">
-                        <li><a href="#"><span class="fab fa-twitter"></span></a></li>
+                        <li><a href="https://twitter.com/NIMRMuhimbili"><span class="fab fa-twitter"></span></a></li>
                         <li><a href="#"><span class="fab fa-facebook-square"></span></a></li>
                         <li><a href="#"><span class="fab fa-pinterest-p"></span></a></li>
                         <li><a href="#"><span class="fab fa-instagram"></span></a></li>
