--- a/nimr_web/templates/nimr_web/bootstrap/dp_monitoring.html
+++ b/nimr_web/templates/nimr_web/bootstrap/dp_monitoring.html
@@ -6,11 +6,11 @@
         <div class="auto-container">
             <div class="content-box">
                 <div class="title centred">
-                    <h1>LABORATORY</h1>
+                    <h1>Monitoring and Control</h1>
                 </div>
                 <ul class="bread-crumb clearfix">
                     <li><a href="{% url 'nimr_web:home' %}">Home</a></li>
-                    <li>Laboratory Department</li>
+                    <li>Monitoring and Control Department</li>
                 </ul>
             </div>
         </div>
@@ -25,62 +25,84 @@
                     <div class="content_block_8">
                         <div class="content-box">
                             <div class="sec-title">
-                                <h6><i class="flaticon-star"></i><span>Laboratory</span></h6>
-                                <h2>THE CENTRAL TUBERCULOSIS REFERENCE LABORATORY</h2>
+                                <h6><i class="flaticon-star"></i><span>Monitoring and Control</span></h6>
+                                <h2>Monitoring and Control Department</h2>
                                 <div class="title-shape"></div>
                             </div>
                             <div class="text">
                                 <p>
-                                    The Central Tuberculosis Reference Laboratory (CTRL) in Tanzania, is a laboratory that provide various services related to the diagnosis of tuberculosis (TB). The laboratory is located at the third floor of the Central Pathology Laboratory (CPL) building within Muhimbili National Hospital (MNH). The CTRL is jointly operated by the National Tuberculosis and Leprosy Control Program (NTLP) and the National Institute for Medical Research - Muhimbili Medical Research Center (NIMR - MMRC). The CTRL is accredited on Acid Fast Bacilli (AFB) smear microscopy and GeneXpert (Xpert MTB/RIF) under International Organization for Standardization (ISO) 15189 of 2012 since 2018 and has managed to maintain the accreditation for four years ever since.
+                                    Muhimbili Medical Research Centre, has developed strategic and action plan that gear
+                                    programmes and projects evolved together with the planned development system. From the
+                                    very outset, efforts have been made to make the monitoring and Control department more
+                                    scientific, effective, practical, and useful. In this context, Monitoring and Control (M&amp;C)
+                                    department represents the effort of the NIMR-Muhmbili to carry out a regular and systematic
+                                    monitoring and evaluation that keep track of inputs, activities, processes, outputs, outcomes
+                                    and impacts of programmes/projects being implemented at the centre to make sure that
+                                    decision, processes and policy formulation processes are evidence-based after being provided
+                                    with relevant data, information, and feedback.
                                 </p>
                                 <p>
-                                    The CTRL has a total of 26 employees; of whom 16 are men and 10 are women. Of the 26 employees, eight (8) are employed though NIMR and 18 through the NTLP. As per carder and qualifications; 16 are technical staff, 8 data personnel and 2 are Laboratory Attendants. Of the 16 technical staff; 1 is a holder of Doctor of Philosophy (PhD), 7 Bachelor of Science and 8 Diploma in Medical Laboratory Sciences.
+                                    As such the department is mandated to provide continuous management of projects to assess
+                                    if progress is made in achieving expected results, to spot bottlenecks in implementation, and
+                                    to highlight whether there are any unintended effects (positive or negative) from an
+                                    investment plan, programme or project (“project/plan”) and its activities.
                                 </p>
                                 <p>
-                                    The main functions of the CTRL includes:
+                                    Our department uses multiple strategies to address goals and targets of the projects, and it has
+                                    a key role to play in the successful implementation of plans, policies, programmes and
+                                    projects which constitute the backbone of national development.
+                                </p>
+                                <p>
+                                    The responsibilities of the M&C department include:
                                 </p>
                             </div>
                             <ul class="accordion-box">
                                 <li class="accordion block">
                                     <div class="acc-btn">
                                         <div class="icon-outer"></div>
-                                        <h5><span>01. </span> Diagnosis of susceptible and drug resistance tuberculosis </h5>
+                                        <h5><span>01. </span> Management, organization and use of monitoring and control systems and NIMR-Muhimbili strategic plans to monitor and control project/programs activities.</h5>
                                     </div>
                                 </li>
                                 <li class="accordion block">
                                     <div class="acc-btn">
                                         <div class="icon-outer"></div>
-                                        <h5><span>02. </span> Provide technical advice in the purchase of medical equipment and reagents used in the investigation of tuberculosis </h5>
+                                        <h5><span>02. </span> Understanding and analysing program/project’s activities. </h5>
                                     </div>
                                 </li>
                                 <li class="accordion block">
                                     <div class="acc-btn">
                                         <div class="icon-outer"></div>
-                                        <h5><span>03. </span> Monitor the resistance of anti-TB drugs through Surveillances such as Drug Resistance Survey (DRS) or Prevalence Survey of Tuberculosis (PST) </h5>
+                                        <h5><span>03. </span> Articulate program/project’s goals and measurable short, medium and long-term targets </h5>
                                     </div>
                                 </li>
                                 <li class="accordion block">
                                     <div class="acc-btn">
                                         <div class="icon-outer"></div>
-                                        <h5><span>04. </span> Monitor the quality of tuberculosis screening services through Implementation of the External Quality Assurance System (EQA)</h5>
+                                        <h5><span>04. </span> Define relationships among inputs, activities, outputs and outcomes</h5>
                                     </div>
                                 </li>
                                 <li class="accordion block">
                                     <div class="acc-btn">
                                         <div class="icon-outer"></div>
-                                        <h5><span>05. </span> Conduct training for laboratories that provide tuberculosis testing services in the country</h5>
+                                        <h5><span>05. </span> Assess how activities will lead to desired outcomes and impacts.</h5>
                                     </div>
                                 </li>
                                 <li class="accordion block">
                                     <div class="acc-btn">
                                         <div class="icon-outer"></div>
-                                        <h5><span>06. </span> Provide practical training services (Field work attachment) for Undergraduates, Postgraduates and diploma students in this country.</h5>
+                                        <h5><span>06. </span> Documents progress of project goals and effectiveness or ineffectiveness of various strategies in producing this progress, including documenting strength and weakness of the project</h5>
                                     </div>
                                 </li>
                                 <li class="accordion block">
                                     <div class="acc-btn">
                                         <div class="icon-outer"></div>
-                                        <h5><span>07. </span> Participate in various researches relevant to tuberculosis and other diseases of public health importance</h5>
+                                        <h5><span>07. </span> Provide report with advice and recommendation on the way forward</h5>
+                                    </div>
+                                </li>
+                                <li class="accordion block">
+                                    <div class="acc-btn">
+                                        <div class="icon-outer"></div>
+                                        <h5><span>08. </span> Assurance of the continuity of the monitoring and control systems and NIMR-Muhimbili strategic plans, and integration and connectivity with other monitoring systems and the whole NIMR strategic plans.</h5>
                                     </div>
                                 </li>
                             </ul>
