open external link in new tab

--- a/nimr_web/templates/nimr_web/bootstrap/base.html
+++ b/nimr_web/templates/nimr_web/bootstrap/base.html
@@ -236,7 +236,7 @@
                                 </div>
                                 <ul class="social-box">
                                     <li class="facebook"><a href="#" class="fab fa-facebook-f"></a></li>
-                                    <li class="twitter"><a href="https://twitter.com/NIMRMuhimbili" class="fab fa-twitter"></a></li>
+                                    <li class="twitter"><a href="https://twitter.com/NIMRMuhimbili" target="_blank" class="fab fa-twitter"></a></li>
                                     <li class="linkedin"><a href="#" class="fab fa-linkedin-in"></a></li>
                                     <li class="instagram"><a href="#" class="fab fa-instagram"></a></li>
                                 </ul>
@@ -277,9 +277,9 @@
                             <div class="weathre-box"><i
                                     class="flaticon-sunny-day-or-sun-weather"></i><strong><a href="#">{% now "jS F Y" %} </a></strong></div>
                             <ul class="links-box clearfix">
-                                <li><strong><a href="http://www.nimr.or.tz/">NIMR HQ</a></strong></li>
-                                <li><strong><a href="https://www.moh.go.tz/en/">MOH</a></strong></li>
-                                <li><strong><a href="https://mail.nimr.or.tz/">STAFF MAILS</a></strong></li>
+                                <li><strong><a href="http://www.nimr.or.tz/" target="_blank">NIMR HQ</a></strong></li>
+                                <li><strong><a href="https://www.moh.go.tz/en/" target="_blank">MOH</a></strong></li>
+                                <li><strong><a href="https://mail.nimr.or.tz/" target="_blank">STAFF MAILS</a></strong></li>
                             </ul>
                         </div>
                         <div class="right-column pull-right clearfix">
@@ -289,7 +289,7 @@
                             </ul>
                             <ul class="social-links clearfix">
                                 <li><a href="#"><i class="fab fa-facebook-square"></i></a></li>
-                                <li><a href="https://twitter.com/NIMRMuhimbili"><i class="fab fa-twitter-square"></i></a></li>
+                                <li><a href="https://twitter.com/NIMRMuhimbili" target="_blank"><i class="fab fa-twitter-square"></i></a></li>
                                 <li><a href="#"><i class="fab fa-youtube-square"></i></a></li>
                                 <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
                             </ul>
@@ -406,7 +406,7 @@
                 </div>
                 <div class="social-links">
                     <ul class="clearfix">
-                        <li><a href="https://twitter.com/NIMRMuhimbili"><span class="fab fa-twitter"></span></a></li>
+                        <li><a href="https://twitter.com/NIMRMuhimbili" target="_blank"><span class="fab fa-twitter"></span></a></li>
                         <li><a href="#"><span class="fab fa-facebook-square"></span></a></li>
                         <li><a href="#"><span class="fab fa-pinterest-p"></span></a></li>
                         <li><a href="#"><span class="fab fa-instagram"></span></a></li>
@@ -790,9 +790,9 @@
                                 Medical Research Centre</a> All Rights Reserved. </p></strong>
                         </div>
                         <ul class="footer-nav clearfix pull-right">
-                            <li><strong><a href="https://mail.nimr.or.tz/">STAFF MAILS</a></strong></li>
-                            <li><strong><a href="http://www.nimr.or.tz/">NIMR HQ</a></strong></li>
-                            <li><strong><a href="https://www.moh.go.tz/">Ministry Of Health</a></strong></li>
+                            <li><strong><a href="https://mail.nimr.or.tz/" target="_blank">STAFF MAILS</a></strong></li>
+                            <li><strong><a href="http://www.nimr.or.tz/" target="_blank">NIMR HQ</a></strong></li>
+                            <li><strong><a href="https://www.moh.go.tz/" target="_blank">Ministry Of Health</a></strong></li>
                         </ul>
                     </div>
                 </div>
