--- a/nimr_web/templates/nimr_web/bootstrap/base.html
+++ b/nimr_web/templates/nimr_web/bootstrap/base.html
@@ -767,18 +767,9 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-3 col-md-6 col-sm-12 footer-column">
-                            <div class="footer-widget register-widget">
-                                <div class="inner-box">
-                                    <div class="upper">
-                                        <div class="icon-box"><i class="flaticon-edit"></i></div>
-                                        <h4>Get In Touch</h4>
-                                    </div>
-                                    <p>Please leave us your comments or suggestions.</p>
-                                    <a href="{% url 'nimr_web:contact' %}">Contact Us Now</a>
-                                </div>
-                            </div>
-                        </div>
+                        <a class="twitter-timeline" data-width="260" data-height="350"
+                           href="https://twitter.com/nimrmuhimbili">Tweets by NIMR Muhimbili</a>
+                        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                     </div>
                 </div>
             </div>
