--- a/nimr_web/templates/nimr_web/bootstrap/dp_finance.html
+++ b/nimr_web/templates/nimr_web/bootstrap/dp_finance.html
@@ -1,5 +1,8 @@
 {% extends 'nimr_web/bootstrap/base.html' %}
 {% load static %}
+{% block title %}
+    <title> NIMR-MUHIMBILI | Department </title>
+{% endblock %}
 {% block content %}
         <!-- banner-section -->
     <section class="page-title" style="background-image: url({% static 'assets/images/background/hchipe.jpg' %});">
