--- a/nimr_web/templates/nimr_web/bootstrap/contact.html
+++ b/nimr_web/templates/nimr_web/bootstrap/contact.html
@@ -1,8 +1,8 @@
 {% extends 'nimr_web/bootstrap/base.html' %}
 {% load static %}
 {% block title %}
-        <title> NIMR-MUHIMBILI | Home </title>
-    {% endblock %}
+    <title> NIMR-MUHIMBILI | Contact </title>
+{% endblock %}
 {% block content %}
     <!-- banner-section -->
     <section class="page-title" style="background-image: url({% static 'assets/images/background/hchipe.jpg' %});">
