--- a/nimr_web/templates/nimr_web/bootstrap/base.html
+++ b/nimr_web/templates/nimr_web/bootstrap/base.html
@@ -281,6 +281,7 @@
                             <ul class="links-box clearfix">
                                 <li><strong><a href="http://www.nimr.or.tz/" target="_blank">NIMR HQ</a></strong></li>
                                 <li><strong><a href="https://www.moh.go.tz/en/" target="_blank">MOH</a></strong></li>
+                                <li><strong><a href="https://emrejesho.gov.go.tz/" target="_blank">eMREJESHO</a></strong></li>
                                 <li><strong><a href="https://mail.nimr.or.tz/" target="_blank">STAFF MAILS</a></strong></li>
                             </ul>
                         </div>
@@ -785,6 +786,7 @@
                         <ul class="footer-nav clearfix pull-right">
                             <li><strong><a href="https://mail.nimr.or.tz/" target="_blank">STAFF MAILS</a></strong></li>
                             <li><strong><a href="http://www.nimr.or.tz/" target="_blank">NIMR HQ</a></strong></li>
+                            <li><strong><a href="https://emrejesho.gov.go.tz/" target="_blank">eMREJESHO</a></strong></li>
                             <li><strong><a href="https://www.moh.go.tz/" target="_blank">Ministry Of Health</a></strong></li>
                         </ul>
                     </div>
