--- a/nimr_web/templates/nimr_web/bootstrap/dp_lab.html
+++ b/nimr_web/templates/nimr_web/bootstrap/dp_lab.html
@@ -1,7 +1,7 @@
 {% extends 'nimr_web/bootstrap/base.html' %}
 {% load static %}
 {% block title %}
-    <title> NIMR-MUHIMBILI | Department </title>
+    <title> NIMR-MUHIMBILI | LAB </title>
 {% endblock %}
 {% block content %}
     <!-- banner-section -->
