--- a/nimr_web/templates/nimr_web/bootstrap/publications.html
+++ b/nimr_web/templates/nimr_web/bootstrap/publications.html
@@ -1,6 +1,9 @@
 {% extends 'nimr_web/bootstrap/base.html' %}
 {% load nimr_web_tags %}
 {% load static %}
+{% block title %}
+    <title> NIMR-MUHIMBILI | Publications </title>
+{% endblock %}
 {% block content %}
         <!-- banner-section -->
     <section class="page-title" style="background-image: url({% static 'assets/images/background/hchipe.jpg' %});">
