--- a/nimr_web/templates/nimr_web/bootstrap/base.html
+++ b/nimr_web/templates/nimr_web/bootstrap/base.html
@@ -770,7 +770,8 @@
                                 </div>
                             </div>
                         </div>
-                        <a class="twitter-timeline" data-width="300" data-height="400" href="https://twitter.com/NIMRMuhimbili?ref_src=twsrc%5Etfw">Tweets by NIMRMuhimbili</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                        <a class="twitter-timeline" data-width="300" data-height="400" href="https://twitter.com/NIMRMuhimbili?ref_src=twsrc%5Etfw">Tweets by NIMRMuhimbili</a>
+                        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
                     </div>
                 </div>
